# opentelemetry-resourcedetector-docker

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: build-and-test.yml  python-package.yml
src/opentelemetry/resourcedetector/docker/: __init__.py
src/opentelemetry_resourcedetector_docker/: __init__.py
tests/: conftest.py  test_detection.py  test_integration.py  test_outside_docker.py  test_rando_docker_access.py  test_with_docker_access.py  test_with_docker_socket.py  test_without_docker_socket.py
